--- a/box_launch/tmux/jetson_recording.yaml
+++ b/box_launch/tmux/jetson_recording.yaml
@@ -28,3 +28,9 @@ windows:
       - source ~/catkin_ws/src/grand_tour_box/box_configuration/alias.sh  
       - df -h $HOME
       focus: true
+    - shell_command:
+      - source /opt/ros/noetic/setup.bash
+      - source ~/catkin_ws/devel/setup.bash
+      - source ~/catkin_ws/src/grand_tour_box/box_configuration/alias.sh  
+      - df -h $HOME
+      focus: true
