--- a/box_bringup/bringup_zed2i_visualization/package.xml
+++ b/box_bringup/bringup_zed2i_visualization/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>bringup_zed2i</name>
+  <name>bringup_zed2i_visualization</name>
   <version>0.0.0</version>
-  <description>The bringup_hdr package</description>
+  <description>The bringup_zed2i_visualization package</description>
   <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
