--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -13,12 +13,7 @@ jetson:
     - /tf_static
     - /tf
   hdr:
-    - /gt_box/hdr_camera_left/camera_info # These are done by ros2 now. TODO: Map the topics here to ROS2.
-    - /gt_box/hdr_camera_left/image_raw/compressed
-    - /gt_box/hdr_camera_front/camera_info
-    - /gt_box/hdr_camera_front/image_raw/compressed
-    - /gt_box/hdr_camera_right/camera_info
-    - /gt_box/hdr_camera_right/image_raw/compressed
+    - /test # These are done by ros2 now. TODO: Map the topics here to ROS2.
   
 nuc:
   utils:
