Adding relay nodes to pass ros2 topics to the opc

--- a/box_launch/launch_jetson/package.xml
+++ b/box_launch/launch_jetson/package.xml
@@ -21,4 +21,5 @@
   <depend>box_rviz</depend>
   <depend>box_health</depend>
   <depend>box_throttling</depend>
+  <depend>box_relaying</depend>
 </package>
