--- a/box_utils/box_rviz/package.xml
+++ b/box_utils/box_rviz/package.xml
@@ -10,5 +10,6 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>rqt_rviz_wrapper</depend>
   <depend>box_throttling</depend>
+  <depend>box_relaying</depend>
 
 </package>
