--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -42,6 +42,11 @@ nuc:
     - /gt_box/alphasense_driver_node/cam4/color/camera_info
     - /gt_box/alphasense_driver_node/cam5/color/image/compressed
     - /gt_box/alphasense_driver_node/cam5/color/camera_info
+    - /gt_box/alphasense_driver_node/cam1/color/image
+    - /gt_box/alphasense_driver_node/cam2/color/image
+    - /gt_box/alphasense_driver_node/cam3/color/image
+    - /gt_box/alphasense_driver_node/cam4/color/image
+    - /gt_box/alphasense_driver_node/cam5/color/image
     - /gt_box/alphasense_driver_node/debug_info
     - /gt_box/alphasense_driver_node/imu
     - /gt_box/alphasense_driver_node/ncamera_is_standby
