--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,12 +8,12 @@ repos:
       - id: black
         language_version: python3
         args: [--line-length=120]
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
-    hooks:
-      - id: flake8
-        args: [--max-line-length=120, "--ignore=E402,E501,W503,C901,E731,W605,E722", "--extend-ignore=E203", "--exclude=_*,.vscode,.git"]
-        language_version: python3
+  # - repo: https://github.com/PyCQA/flake8
+  #   rev: 7.0.0
+  #   hooks:
+  #     - id: flake8
+  #       args: [--max-line-length=120, "--ignore=E402,E501,W503,C901,E731,W605,E722", "--extend-ignore=E203", "--exclude=_*,.vscode,.git"]
+  #       language_version: python3
   - repo: local
     hooks:
       - id: jupyter-nb-clear-output
