--- a/box_launch/tmux/jetson_calib_imu.yaml
+++ b/box_launch/tmux/jetson_calib_imu.yaml
@@ -26,5 +26,5 @@ windows:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
       - source ~/catkin_ws/src/grand_tour_box/box_configuration/jetson/alias.sh  
-      - df -h $HOME
+      - df -h /data
       focus: true
