--- a/box_launch/tmux/jetson_recording.yaml
+++ b/box_launch/tmux/jetson_recording.yaml
@@ -26,7 +26,7 @@ windows:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
       - source ~/catkin_ws/src/grand_tour_box/box_configuration/jetson/alias.sh  
-      - df -h $HOME
+      - df -h /data
       focus: true
     - shell_command:
       - sleep 1
