--- a/box_utils/box_auto/job_cfg.yaml
+++ b/box_utils/box_auto/job_cfg.yaml
@@ -1,8 +1,10 @@
 build:
-  rectify:
+  color_correction:
     build_args:
-  topic_freq:
-    build_args:
+  # rectify:
+  #   build_args:
+  # topic_freq:
+  #   build_args:
 
 run:
   rectify_alphasense:
@@ -13,7 +15,6 @@ run:
       - "/gt_box/alphasense_driver_node/cam1/color/image/compressed,/gt_box/alphasense_driver_node/cam2/color/image/compressed,/gt_box/alphasense_driver_node/cam3/color/image/compressed,/gt_box/alphasense_driver_node/cam4/color/image/compressed,/gt_box/alphasense_driver_node/cam5/color/image/compressed"
       - "/gt_box/alphasense_driver_node/cam1/color/camera_info,/gt_box/alphasense_driver_node/cam2/color/camera_info,/gt_box/alphasense_driver_node/cam3/color/camera_info,/gt_box/alphasense_driver_node/cam4/color/camera_info,/gt_box/alphasense_driver_node/cam5/color/camera_info"
     container: rectify
-
   rectify_hdr:
     run_args:
       - -V /home/rsl/shakedown_27_06_2024/2024-06-27-12-54-04:/mission_data
@@ -22,7 +23,6 @@ run:
       - "/gt_box/hdr_center/image_raw/compressed,/gt_box/hdr_left/image_raw/compressed,/gt_box/hdr_right/image_raw/compressed"
       - "/gt_box/hdr_center/camera_info,/gt_box/hdr_left/camera_info,/gt_box/hdr_right/camera_info"
     container: rectify
-
   topic_freq:
     run_args:
       - -V /home/rsl/shakedown_27_06_2024/2024-06-27-12-54-04:/mission_data
