--- a/box_launch/tmux/nuc_recording.yaml
+++ b/box_launch/tmux/nuc_recording.yaml
@@ -19,7 +19,13 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_nuc)/launch/nuc_recording.launch
+            $(rospack find box_recording)/launch/rosbag_record_node.launch
+            $(rospack find box_health)/launch/box_health_client.launch
+            $(rospack find box_throttling)/launch/throttle_nuc.launch
+            $(rospack find bringup_alphasense)/launch/alphasense_default.launch
+            $(rospack find bringup_hesai)/launch/hesai_lidar.launch
+            $(rospack find bringup_livox)/launch/livox_lidar.launch
+            $(rospack find bringup_cpt7)/launch/rover.launch
             "
           use_gui:=false
     - shell_command:
