--- a/box_utils/box_recording/cfg/calib_camera.yaml
+++ b/box_utils/box_recording/cfg/calib_camera.yaml
@@ -1,7 +1,6 @@
 jetson:
   utils:
     - /gt_box/alphasense_driver_node/imu
-    - /gt_box/health_status/jetson
   zed2i:
     - /gt_box/zed2i_driver_node/rgb_raw/image_raw_color/compressed
     - /gt_box/zed2i_driver_node/left_raw/image_raw_color/compressed
@@ -12,41 +11,37 @@ jetson:
     - /ap20/tps
     - /ap20/imu
   hdr:
-    - /gt_box/hdr_center/image_raw/compressed
+    - /gt_box/hdr_center/image_raw
     - /gt_box/hdr_center/camera_info
-    - /gt_box/hdr_left/image_raw/compressed
+    - /gt_box/hdr_left/image_raw
     - /gt_box/hdr_left/camera_info
-    - /gt_box/hdr_right/image_raw/compressed
+    - /gt_box/hdr_right/image_raw
     - /gt_box/hdr_right/camera_info
   clock:
     - /clock
 nuc:
-  utils:
+  imus:
     - /gt_box/stim320/imu
     - /gt_box/adis16475/imu
     - /gt_box/livox/imu
-    - /gt_box/health_status/nuc
+    - /gt_box/alphasense_driver_node/imu
+    - /gt_box/livox/imu
   hesai:
     - /gt_box/hesai/packets
+    - /gt_box/hesai/points
   livox:
-    - /gt_box/livox/imu
     - /gt_box/livox/lidar
   alphasense:
-    - /gt_box/alphasense_driver_node/cam1/color/image/compressed
+    - /gt_box/alphasense_driver_node/cam1/color/image
     - /gt_box/alphasense_driver_node/cam1/color/camera_info
-    - /gt_box/alphasense_driver_node/cam2/color/image/compressed
+    - /gt_box/alphasense_driver_node/cam2/color/image
     - /gt_box/alphasense_driver_node/cam2/color/camera_info
-    - /gt_box/alphasense_driver_node/cam3/color/image/compressed
+    - /gt_box/alphasense_driver_node/cam3/color/image
     - /gt_box/alphasense_driver_node/cam3/color/camera_info
-    - /gt_box/alphasense_driver_node/cam4/color/image/compressed
+    - /gt_box/alphasense_driver_node/cam4/color/image
     - /gt_box/alphasense_driver_node/cam4/color/camera_info
-    - /gt_box/alphasense_driver_node/cam5/color/image/compressed
+    - /gt_box/alphasense_driver_node/cam5/color/image
     - /gt_box/alphasense_driver_node/cam5/color/camera_info
-    - /gt_box/alphasense_driver_node/debug_info
-    - /gt_box/alphasense_driver_node/imu
-    - /gt_box/alphasense_driver_node/ncamera_is_standby
-    - /gt_box/alphasense_driver_node/serial_number
-
   cpt7:
     - /gt_box/cpt7/bestgnsspos
     - /gt_box/cpt7/bestpos
