--- a/box_launch/tmux/jetson_calib_camera.yaml
+++ b/box_launch/tmux/jetson_calib_camera.yaml
@@ -19,7 +19,7 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find box_health)/launch/box_health_client.launch
+            $(rospack find box_health)/launch/box_health.launch
             $(rospack find bringup_ap20)/launch/ap20.launch
             $(rospack find box_recording)/launch/rosbag_record_coordinator.launch
             $(rospack find box_recording)/launch/rosbag_record_node.launch
