--- a/box_utils/box_recording/cfg/calib_camera.yaml
+++ b/box_utils/box_recording/cfg/calib_camera.yaml
@@ -2,15 +2,14 @@ jetson:
   utils:
     - /gt_box/alphasense_driver_node/imu
   zed2i:
-    - /gt_box/zed2i_driver_node/rgb_raw/image_raw_color/compressed
-    - /gt_box/zed2i_driver_node/left_raw/image_raw_color/compressed
-    - /gt_box/zed2i_driver_node/right_raw/image_raw_color/compressed
+    - /gt_box/zed2i_driver_node/left_raw/image_raw_gray
+    - /gt_box/zed2i_driver_node/right_raw/image_raw_gray
   ap20:
-    - /gt_box/ap20/ap20_imu
+    - /gt_box/ap20/imu
     - /gt_box/ap20/prism_position
     - /ap20/tps
     - /ap20/imu
-  hdr:
+  hdr_ros1:
     - /gt_box/hdr_center/image_raw
     - /gt_box/hdr_center/camera_info
     - /gt_box/hdr_left/image_raw
@@ -32,16 +31,11 @@ nuc:
   livox:
     - /gt_box/livox/lidar
   alphasense:
-    - /gt_box/alphasense_driver_node/cam1/color/image
-    - /gt_box/alphasense_driver_node/cam1/color/camera_info
-    - /gt_box/alphasense_driver_node/cam2/color/image
-    - /gt_box/alphasense_driver_node/cam2/color/camera_info
-    - /gt_box/alphasense_driver_node/cam3/color/image
-    - /gt_box/alphasense_driver_node/cam3/color/camera_info
-    - /gt_box/alphasense_driver_node/cam4/color/image
-    - /gt_box/alphasense_driver_node/cam4/color/camera_info
-    - /gt_box/alphasense_driver_node/cam5/color/image
-    - /gt_box/alphasense_driver_node/cam5/color/camera_info
+    - /gt_box/alphasense_driver_node/cam1
+    - /gt_box/alphasense_driver_node/cam2
+    - /gt_box/alphasense_driver_node/cam3
+    - /gt_box/alphasense_driver_node/cam4
+    - /gt_box/alphasense_driver_node/cam5
   cpt7:
     - /gt_box/cpt7/bestgnsspos
     - /gt_box/cpt7/bestpos
