--- a/box_configuration/jetson/chrony.conf
+++ b/box_configuration/jetson/chrony.conf
@@ -14,10 +14,10 @@
 # About using servers from the NTP Pool Project in general see (LP: #104525).
 # Approved by Ubuntu Technical Board on 2011-02-08.
 # See http://www.pool.ntp.org/join.html for more information.
-# pool ntp.ubuntu.com        iburst maxsources 4
-# pool 0.ubuntu.pool.ntp.org iburst maxsources 1
-# pool 1.ubuntu.pool.ntp.org iburst maxsources 1
-# pool 2.ubuntu.pool.ntp.org iburst maxsources 2
+#pool ntp.ubuntu.com        iburst maxsources 4
+#pool 0.ubuntu.pool.ntp.org iburst maxsources 1 
+#pool 1.ubuntu.pool.ntp.org iburst maxsources 1
+#pool 2.ubuntu.pool.ntp.org iburst maxsources 2
 
 # This directive specify the location of the file containing ID/key pairs for
 # NTP authentication.
@@ -36,6 +36,8 @@ logdir /var/log/chrony
 # Stop bad estimates upsetting machine clock.
 maxupdateskew 100.0
 
+sched_priority 90
+
 # This directive enables kernel synchronisation (every 11 minutes) of the
 # real-time clock. Note that it can’t be used along with the 'rtcfile' directive.
 rtcsync
@@ -44,5 +46,12 @@ rtcsync
 # one second, but only in the first three clock updates.
 makestep 1 3
 
-allow 192.168.2.0/24
-local stratum 1
+lock_all
+
+allow all
+#allow 192.168.2
+#allow 192.168.0.128
+#allow 192.168.0.129
+#allow 192.168.0.127
+
+local stratum 2
