--- a/box_utils/box_health/cfg/health_check_topics.yaml
+++ b/box_utils/box_health/cfg/health_check_topics.yaml
@@ -22,6 +22,8 @@ jetson:
     - ptp4l_mgbe0
   phc2sys:
     - phc2sys_mgbe0
+  chrony: False
+  recording: True
   memory: /data
   cpu: True
   fsk:
@@ -31,6 +33,7 @@ jetson:
       left: 10
       top: 10
       text_size: 9
+
 nuc:
   topics:
     /gt_box/alphasense_driver_node/imu:
@@ -59,6 +62,8 @@ nuc:
   phc2sys:
     - phc2sys_enp45s0
     - phc2sys_enp46s0
+  chrony: False
+  recording: True
   memory: /data
   cpu: True
   fsk:
@@ -79,6 +84,8 @@ pi:
     - ptp4l_eth0
   phc2sys:
     - phc2sys_eth0
+  chrony: False
+  recording: False
   memory: /data
   cpu: True
   fsk:
