prep digi forest

--- a/box_utils/box_health/CMakeLists.txt
+++ b/box_utils/box_health/CMakeLists.txt
@@ -28,6 +28,8 @@ add_message_files(
   HealthStatusJetson.msg
   HealthStatusNuc.msg
   HealthStatusPi.msg
+  HealthStatusLpc.msg
+  HealthStatusNpc.msg
 )
 
 catkin_install_python(
