--- a/box_utils/box_recording/cfg/robot.yaml
+++ b/box_utils/box_recording/cfg/robot.yaml
@@ -104,8 +104,8 @@ lpc:
     - /depth_camera_rear_lower/depth/camera_info
     - /depth_camera_rear_lower/depth/image_rect_raw
     - /depth_camera_rear_lower/infra1/image_rect_raw
-# npc:
-  npc_general:
+npc:
+  general:
     - /behavior_engine/status
     - /chrony_monitor_npc/status
     - /cpu_monitor_npc/status
@@ -114,23 +114,23 @@ lpc:
     - /memory_monitor_npc/status
     - /network_monitor_npc/status
     - /pinger_npc_to_lpc/ping
-  # npc_wide_angle_cameras_front_rear:
-  #   - /wide_angle_camera_front/image_color_rect/compressed
-  #   - /wide_angle_camera_front/camera_info
-  #   - /wide_angle_camera_rear/image_color_rect/compressed
-  #   - /wide_angle_camera_rear/camera_info
-  # npc_depth_cameras:
-  #   - /depth_camera_front/depth/camera_info
-  #   - /depth_camera_front/depth/image_rect_raw
-  #   - /depth_camera_front/infra1/image_rect_raw
-  #   - /depth_camera_left/depth/camera_info
-  #   - /depth_camera_left/depth/image_rect_raw
-  #   - /depth_camera_left/infra1/image_rect_raw
-  #   - /depth_camera_rear/depth/camera_info
-  #   - /depth_camera_rear/depth/image_rect_raw
-  #   - /depth_camera_rear/infra1/image_rect_raw
-  #   - /depth_camera_right/depth/camera_info
-  #   - /depth_camera_right/depth/image_rect_raw
-  #   - /depth_camera_right/infra1/image_rect_raw
-  npc_velodyne:
+  wide_angle_cameras_front_rear:
+    - /wide_angle_camera_front/image_color/compressed
+    - /wide_angle_camera_rear/image_color/compressed
+    - /wide_angle_camera_front/camera_info
+    - /wide_angle_camera_rear/camera_info
+  depth_cameras:
+    - /depth_camera_front/depth/camera_info
+    - /depth_camera_front/depth/image_rect_raw
+    - /depth_camera_front/infra1/image_rect_raw
+    - /depth_camera_left/depth/camera_info
+    - /depth_camera_left/depth/image_rect_raw
+    - /depth_camera_left/infra1/image_rect_raw
+    - /depth_camera_rear/depth/camera_info
+    - /depth_camera_rear/depth/image_rect_raw
+    - /depth_camera_rear/infra1/image_rect_raw
+    - /depth_camera_right/depth/camera_info
+    - /depth_camera_right/depth/image_rect_raw
+    - /depth_camera_right/infra1/image_rect_raw
+  velodyne:
     - /lidar/packets
