--- a/box_utils/box_recording/cfg/robot.yaml
+++ b/box_utils/box_recording/cfg/robot.yaml
@@ -1,121 +1,132 @@
+
 jetson:
-  utils:
-    - /gt_box/alphasense_driver_node/imu
-    - /gt_box/health_status/jetson/status
-  zed2i:
-    - svo # SVO recording, not rosbag. Mutually exclusive: won't record zed ros topics if svo is set here.
-  ap20:
-    - /gt_box/ap20/imu
-    - /gt_box/ap20/prism_position
-    - /ap20/tps
-    - /ap20/imu
-  hdr:
-    - /gt_box/hdr_center/image_raw/compressed
-    - /gt_box/hdr_center/camera_info
-    - /gt_box/hdr_left/image_raw/compressed
-    - /gt_box/hdr_left/camera_info
-    - /gt_box/hdr_right/image_raw/compressed
-    - /gt_box/hdr_right/camera_info
-  clock:
-    - /clock
+  bags:
+    utils:
+      - /gt_box/alphasense_driver_node/imu
+      - /gt_box/health_status/jetson/status
+    zed2i:
+      - svo # SVO recording, not rosbag. Mutually exclusive: won't record zed ros topics if svo is set here.
+    ap20:
+      - /gt_box/ap20/imu
+      - /gt_box/ap20/prism_position
+      - /ap20/tps
+      - /ap20/imu
+    hdr:
+      - /gt_box/hdr_center/image_raw/compressed
+      - /gt_box/hdr_center/camera_info
+      - /gt_box/hdr_left/image_raw/compressed
+      - /gt_box/hdr_left/camera_info
+      - /gt_box/hdr_right/image_raw/compressed
+      - /gt_box/hdr_right/camera_info
+    clock:
+      - /clock
 
 nuc:
-  cpt7_local:
-    - cpt7_local
-  utils:
-    - /gt_box/livox/imu
-    - /gt_box/health_status/nuc/status
-  hesai:
-    - /gt_box/hesai/packets
-  livox:
-    - /gt_box/livox/lidar
-  alphasense:
-    - /gt_box/alphasense_driver_node/cam1/color/image/compressed
-    - /gt_box/alphasense_driver_node/cam1/color/camera_info
-    - /gt_box/alphasense_driver_node/cam2/color/image/compressed
-    - /gt_box/alphasense_driver_node/cam2/color/camera_info
-    - /gt_box/alphasense_driver_node/cam3/color/image/compressed
-    - /gt_box/alphasense_driver_node/cam3/color/camera_info
-    - /gt_box/alphasense_driver_node/cam4/color/image/compressed
-    - /gt_box/alphasense_driver_node/cam4/color/camera_info
-    - /gt_box/alphasense_driver_node/cam5/color/image/compressed
-    - /gt_box/alphasense_driver_node/cam5/color/camera_info
-    - /gt_box/alphasense_driver_node/debug_info
-    - /gt_box/alphasense_driver_node/imu
-    - /gt_box/alphasense_driver_node/ncamera_is_standby
-    - /gt_box/alphasense_driver_node/serial_number
+  bags:
+    cpt7_local:
+      - cpt7_local
+    utils:
+      - /gt_box/livox/imu
+      - /gt_box/health_status/nuc/status
+    hesai:
+      - /gt_box/hesai/packets
+    livox:
+      - /gt_box/livox/lidar
+    alphasense:
+      - /gt_box/alphasense_driver_node/cam1/color/image/compressed
+      - /gt_box/alphasense_driver_node/cam1/color/camera_info
+      - /gt_box/alphasense_driver_node/cam2/color/image/compressed
+      - /gt_box/alphasense_driver_node/cam2/color/camera_info
+      - /gt_box/alphasense_driver_node/cam3/color/image/compressed
+      - /gt_box/alphasense_driver_node/cam3/color/camera_info
+      - /gt_box/alphasense_driver_node/cam4/color/image/compressed
+      - /gt_box/alphasense_driver_node/cam4/color/camera_info
+      - /gt_box/alphasense_driver_node/cam5/color/image/compressed
+      - /gt_box/alphasense_driver_node/cam5/color/camera_info
+      - /gt_box/alphasense_driver_node/debug_info
+      - /gt_box/alphasense_driver_node/imu
+      - /gt_box/alphasense_driver_node/ncamera_is_standby
+      - /gt_box/alphasense_driver_node/serial_number
 
-  cpt7:
-    - /gt_box/cpt7/bestgnsspos
-    - /gt_box/cpt7/bestpos
-    - /gt_box/cpt7/bestutm
-    - /gt_box/cpt7/bestvel
-    - /gt_box/cpt7/corrimu
-    - /gt_box/cpt7/gps/fix
-    - /gt_box/cpt7/gps/gps
-    - /gt_box/cpt7/gps/imu
-    - /gt_box/cpt7/heading2
-    - /gt_box/cpt7/imu/data_raw
-    - /gt_box/cpt7/insconfig
-    - /gt_box/cpt7/inspva
-    - /gt_box/cpt7/inspvax
-    - /gt_box/cpt7/insstdev
-    - /gt_box/cpt7/odom
-    - /gt_box/cpt7/oem7raw
-    - /gt_box/cpt7/ppppos
-    - /gt_box/cpt7/rxstatus
-    - /gt_box/cpt7/terrastarinfo
-    - /gt_box/cpt7/terrastarstatus
-    - /gt_box/cpt7/time
-  tf:
-    - /tf
-    - /tf_static
+    cpt7:
+      - /gt_box/cpt7/bestgnsspos
+      - /gt_box/cpt7/bestpos
+      - /gt_box/cpt7/bestutm
+      - /gt_box/cpt7/bestvel
+      - /gt_box/cpt7/corrimu
+      - /gt_box/cpt7/gps/fix
+      - /gt_box/cpt7/gps/gps
+      - /gt_box/cpt7/gps/imu
+      - /gt_box/cpt7/heading2
+      - /gt_box/cpt7/imu/data_raw
+      - /gt_box/cpt7/insconfig
+      - /gt_box/cpt7/inspva
+      - /gt_box/cpt7/inspvax
+      - /gt_box/cpt7/insstdev
+      - /gt_box/cpt7/odom
+      - /gt_box/cpt7/oem7raw
+      - /gt_box/cpt7/ppppos
+      - /gt_box/cpt7/rxstatus
+      - /gt_box/cpt7/terrastarinfo
+      - /gt_box/cpt7/terrastarstatus
+      - /gt_box/cpt7/time
+    tf:
+      - /tf
+      - /tf_static
 
 lpc:
-  locomotion:
-    - /debug_info
-  general:
-    - /anymal_low_level_controller/actuator_readings
-    - /anymal_low_level_controller/actuator_readings_extended_throttled
-    - /motion_reference/command_pose
-    - /motion_reference/command_twist
-    - /pdb/battery_state
-    - /pdb/intrinsic_state
-    - /pdb/power_state
-    - /sensors/battery_voltage
-    - /soft_emcy_stop
-    - /twist_mux/selected_input
-    - /twist_mux/twist
-    - /rsl_joystick_driver/twist
-    - /rsl_joystick_module/twist
-  anymal_imu:
-    - /sensors/imu
-  state_estimator:
-    - /state_estimator/anymal_state
-    - /state_estimator/odometry
-    - /state_estimator/pose_in_odom
-    - /state_estimator/twist_throttle
-  depth_cameras:
-    - /depth_camera_front_upper/depth/camera_info
-    - /depth_camera_front_upper/depth/image_rect_raw
-    - /depth_camera_rear_upper/depth/camera_info
-    - /depth_camera_rear_upper/depth/image_rect_raw
+  grpc_cfg:
+    adress: 192.168.0.128
+    port: 50051
+  bags:
+    locomotion:
+      - /debug_info
+    general:
+      - /anymal_low_level_controller/actuator_readings
+      - /anymal_low_level_controller/actuator_readings_extended_throttled
+      - /motion_reference/command_pose
+      - /motion_reference/command_twist
+      - /pdb/battery_state
+      - /pdb/intrinsic_state
+      - /pdb/power_state
+      - /sensors/battery_voltage
+      - /soft_emcy_stop
+      - /twist_mux/selected_input
+      - /twist_mux/twist
+      - /rsl_joystick_driver/twist
+      - /rsl_joystick_module/twist
+    anymal_imu:
+      - /sensors/imu
+    state_estimator:
+      - /state_estimator/anymal_state
+      - /state_estimator/odometry
+      - /state_estimator/pose_in_odom
+      - /state_estimator/twist_throttle
+    depth_cameras:
+      - /depth_camera_front_upper/depth/camera_info
+      - /depth_camera_front_upper/depth/image_rect_raw
+      - /depth_camera_rear_upper/depth/camera_info
+      - /depth_camera_rear_upper/depth/image_rect_raw
 npc:
-  general:
-    - /behavior_engine/status
-    - /chrony_monitor_npc/status
-    - /cpu_monitor_npc/status
-    - /cpu_loupe_npc/cpu_loupe
-    - /disk_monitor_npc/status
-    - /memory_monitor_npc/status
-    - /network_monitor_npc/status
-    - /pinger_npc_to_lpc/ping
-  depth_cameras:
-    - /depth_camera_left/depth/camera_info
-    - /depth_camera_left/depth/image_rect_raw
-    - /depth_camera_right/depth/camera_info
-    - /depth_camera_right/depth/image_rect_raw
-  velodyne:
-    - /lidar/packets
-    - /lidar/point_cloud
-    - /lidar/time_sync_status
+  grpc_cfg:
+    adress: 192.168.0.129
+    port: 50052
+  bags:
+    general:
+      - /behavior_engine/status
+      - /chrony_monitor_npc/status
+      - /cpu_monitor_npc/status
+      - /cpu_loupe_npc/cpu_loupe
+      - /disk_monitor_npc/status
+      - /memory_monitor_npc/status
+      - /network_monitor_npc/status
+      - /pinger_npc_to_lpc/ping
+    depth_cameras:
+      - /depth_camera_left/depth/camera_info
+      - /depth_camera_left/depth/image_rect_raw
+      - /depth_camera_right/depth/camera_info
+      - /depth_camera_right/depth/image_rect_raw
+    velodyne:
+      - /lidar/packets
+      - /lidar/point_cloud
+      - /lidar/time_sync_status
