--- a/box_configuration/opc/chrony.conf
+++ b/box_configuration/opc/chrony.conf
@@ -33,15 +33,19 @@ driftfile /var/lib/chrony/chrony.drift
 # Log files location.
 logdir /var/log/chrony
 
+# set the threshold for the adjustment of the system clock that will generate a syslog message
+logchange 0.5
+
 # Stop bad estimates upsetting machine clock.
 maxupdateskew 100.0
-
+# lock chronyd into RAM so that it will never be paged out (for lower and more consistent latency)
+lock_all
 # This directive enables kernel synchronisation (every 11 minutes) of the
 # real-time clock. Note that it can’t be used along with the 'rtcfile' directive.
 rtcsync
 
 # Step the system clock instead of slewing it if the adjustment is larger than
 # one second, but only in the first three clock updates.
-makestep 1 3
+makestep 0.1 -1
 
-server 192.168.2.51 iburst prefer
+server 192.168.2.51 iburst minpoll -4 maxpoll -4 prefer
