--- a/box_configuration/nuc/phc2sys_enp45s0.service
+++ b/box_configuration/nuc/phc2sys_enp45s0.service
@@ -6,7 +6,7 @@ After=ptp4l_enp45s0.service
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/phc2sys -s enp45s0 -c CLOCK_REALTIME -w
+ExecStart=/usr/sbin/phc2sys -s enp45s0 -c CLOCK_REALTIME -w -S 1.0
 
 [Install]
 WantedBy=multi-user.target
