improved chrony config on robot

--- a/box_configuration/anymal/lpc/chrony.conf
+++ b/box_configuration/anymal/lpc/chrony.conf
@@ -52,7 +52,7 @@ logchange 0.5
 # Step the system clock
 
 ############################## ENABLE FOR BOX ##################################
-server 192.168.2.51 minpoll 1 maxpoll 2 polltarget 30 maxdelaydevratio 2 prefer
+server 192.168.2.51 iburst minpoll -4 maxpoll -4 prefer
 ###############################################################################
 
 server anymal-d039-lpc noselect
