--- a/box_configuration/jetson/phc2sys_mgbe0.service
+++ b/box_configuration/jetson/phc2sys_mgbe0.service
@@ -7,6 +7,7 @@ After=ptp4l_mgbe0.service
 [Service]
 Type=simple
 ExecStart=/usr/sbin/phc2sys -s mgbe0 -c CLOCK_REALTIME -O 0 -S 1.0
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
