generating protos automaticially

--- a/box_utils/box_recording/package.xml
+++ b/box_utils/box_recording/package.xml
@@ -14,6 +14,8 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>zed2i_recording_driver_msgs</build_depend>
+  <build_depend>protobuf</build_depend>
+  <build_depend>python3</build_depend>
   <exec_depend>zed2i_recording_driver_msgs</exec_depend>
   <depend>message_generation</depend>
   <depend>message_runtime</depend>
