--- a/box_utils/box_recording/CMakeLists.txt
+++ b/box_utils/box_recording/CMakeLists.txt
@@ -77,6 +77,7 @@ add_service_files(
     StopRecording.srv
     StopRecordingInternal.srv
 )
+catkin_python_setup()
 
 generate_messages(
   DEPENDENCIES
@@ -91,6 +92,8 @@ generate_messages(
 catkin_package(
     CATKIN_DEPENDS std_msgs
 )
+
+
 
 #==
 # Package installation
