--- a/box_launch/tmux/opc_recording.yaml
+++ b/box_launch/tmux/opc_recording.yaml
@@ -26,5 +26,6 @@ windows:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
       - source ~/catkin_ws/src/grand_tour_box/box_configuration/opc/alias.sh 
+      - rosparam echo use_sim_time
       - df -h $HOME
       focus: true
