--- a/box_launch/tmux/opc_replay.yaml
+++ b/box_launch/tmux/opc_replay.yaml
@@ -8,6 +8,8 @@ windows:
   shell_command_before:
     - export HOSTNAME
     - export DISPLAY=:0.0
+    - export ROS_MASTER_URI=http://192.168.2.154:11311
+    - export ROS_IP=192.168.2.154
 
   options:
     pane-border-status: top
@@ -15,7 +17,11 @@ windows:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - roslaunch launch_replay replay.launch
+      - roslaunch bringup_fkie fkie.launch
+          autostart_launch_files:="
+            $(rospack find box_rviz)/launch/box_rviz.launch
+            "
+          use_gui:=true
 
     - shell_command:
       - source /opt/ros/noetic/setup.bash
