--- a/box_launch/tmux/opc_recording.yaml
+++ b/box_launch/tmux/opc_recording.yaml
@@ -20,6 +20,7 @@ windows:
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
             $(rospack find box_rviz)/launch/box_rviz.launch
+            $(rospack find bringup_ap20)/launch/ap20_multiplot.launch
             "
           use_gui:=true
     - shell_command:
