--- a/box_utils/box_recording/cfg/robot.yaml
+++ b/box_utils/box_recording/cfg/robot.yaml
@@ -96,6 +96,8 @@ lpc:
       - /twist_mux/twist
       - /rsl_joystick_driver/twist
       - /rsl_joystick_module/twist
+      - /foot_scan
+      - /joy_manager/twist
     anymal_imu:
       - /sensors/imu
     state_estimator:
@@ -108,6 +110,9 @@ lpc:
       - /depth_camera_front_upper/depth/image_rect_raw
       - /depth_camera_rear_upper/depth/camera_info
       - /depth_camera_rear_upper/depth/image_rect_raw
+    tf:
+      - /tf
+      - /tf_static
 npc:
   grpc_cfg:
     address: 192.168.0.142
@@ -131,3 +136,9 @@ npc:
       - /lidar/packets
       - /lidar/point_cloud
       - /lidar/time_sync_status
+      - /point_cloud_filter/lidar/point_cloud_filtered
+    # wide_angle_cameras:
+    #   - /wide_angle_camera_front/image_color/compressed
+    #   - /wide_angle_camera_front/camera_info
+    #   - /wide_angle_camera_rear/image_color/compressed
+    #   - /wide_angle_camera_rear/camera_info
