--- a/box_configuration/jetson/phc2sys_mgbe0.service
+++ b/box_configuration/jetson/phc2sys_mgbe0.service
@@ -6,7 +6,7 @@ After=ptp4l_mgbe0.service
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/phc2sys -s mgbe0 -c CLOCK_REALTIME -O -37 -S 1.0
+ExecStart=/usr/sbin/phc2sys -s mgbe0 -c CLOCK_REALTIME -S 1.0 -w
 Restart=on-failure
 
 [Install]
