--- a/box_configuration/nuc/phc2sys_enp46s0.service
+++ b/box_configuration/nuc/phc2sys_enp46s0.service
@@ -2,7 +2,9 @@
 Description=Synchronize system clock or PTP hardware clock (PHC) - set enp46s0 clock from enp45s0 clock
 Documentation=man:phc2sys
 Requires=ptp4l_enp46s0.service
+Requires=ptp4l_enp45s0.service
 After=ptp4l_enp46s0.service
+After=ptp4l_enp45s0.service
 
 [Service]
 Type=simple
