--- a/box_configuration/nuc/phc2sys_enp46s0.service
+++ b/box_configuration/nuc/phc2sys_enp46s0.service
@@ -8,7 +8,7 @@ After=ptp4l_enp45s0.service
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/phc2sys -s enp45s0 -c enp46s0 -u 1 -O 0 -m
+ExecStart=/usr/sbin/phc2sys -s enp45s0 -c enp46s0 -u 1 -O 0
 Restart=on-failure
 
 [Install]
