--- a/box_utils/box_recording/cfg/robot.yaml
+++ b/box_utils/box_recording/cfg/robot.yaml
@@ -20,7 +20,7 @@ jetson:
       - /gt_box/hdr_left/camera_info
       - /gt_box/hdr_right/image_raw/compressed
       - /gt_box/hdr_right/camera_info
-    clock:
+    clock_jetson:
       - /clock
 
 nuc:
@@ -116,6 +116,8 @@ lpc:
     tf:
       - /tf
       - /tf_static
+    clock_lpc:
+      - /clock
 npc:
   grpc_cfg:
     address: 192.168.0.142
@@ -140,6 +142,9 @@ npc:
       - /lidar/point_cloud
       - /lidar/time_sync_status
       - /point_cloud_filter/lidar/point_cloud_filtered
+    elevation_mapping:
+      - /elevation_mapping/elevation_map_raw
+
     # wide_angle_cameras:
     #   - /wide_angle_camera_front/image_color/compressed
     #   - /wide_angle_camera_front/camera_info
