--- a/box_configuration/pi/docker_ros2/Dockerfile
+++ b/box_configuration/pi/docker_ros2/Dockerfile
@@ -1,6 +1,8 @@
 FROM ros:humble-ros-base
 
-COPY install_inside_container.sh /install_inside_container.sh
+COPY bash.bashrc /etc/bash.bashrc
+RUN sh -c "chmod +x /etc/bash.bashrc"
+
 COPY install_inside_container.sh /install_inside_container.sh 
 RUN sh -c "chmod +x /install_inside_container.sh"
 RUN /bin/bash -c '/install_inside_container.sh'
