--- a/box_post_processing/box_post_processor/package.xml
+++ b/box_post_processing/box_post_processor/package.xml
@@ -2,18 +2,13 @@
 <package format="2">
   <name>box_post_processor</name>
   <version>0.0.0</version>
-  <description>Range sensor based mapping</description>
+  <description>Perception Box Processing Package</description>
 
-  <maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>
+  <maintainer email="tutuna@ethz.ch">Turcan Tuna</maintainer>
 
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>TODO</license>
 
-
-  <author email="jelavice@ethz.ch">Edo Jelavic</author>
+  <author email="tutuna@ethz.ch">Turcan Tuna</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cmake_clang_tools</build_depend>
