--- a/box_utils/box_auto/package.xml
+++ b/box_utils/box_auto/package.xml
@@ -27,4 +27,6 @@
   <depend>nav_msgs</depend>
   <depend>raw_image_pipeline_python</depend>
   <depend>raw_image_pipeline_ros</depend>
+  <depend>novatel_oem7_driver</depend>
+  
 </package>
