--- a/box_utils/box_auto/package.xml
+++ b/box_utils/box_auto/package.xml
@@ -28,5 +28,6 @@
   <depend>raw_image_pipeline_python</depend>
   <depend>raw_image_pipeline_ros</depend>
   <depend>novatel_oem7_driver</depend>
-  
+  <depend>hesai_ros_driver</depend>
+
 </package>
