--- a/box_utils/box_auto/package.xml
+++ b/box_utils/box_auto/package.xml
@@ -29,5 +29,7 @@
   <depend>raw_image_pipeline_ros</depend>
   <depend>novatel_oem7_driver</depend>
   <depend>hesai_ros_driver</depend>
+  <depend>bringup_hesai</depend>
+  
 
 </package>
